--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "firebase-admin": "^11.2.0",
     "handlebars": "^4.7.7",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.3"
