Configuraciones backend y base de datos

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 8080
-GOOGLE_APPLICATION_CREDENTIALS= C:\Users\pc\chat-proyect\Repo-Chat\firebase.json
+GOOGLE_APPLICATION_CREDENTIALS= D:\Personal\Escritorio\Equipo1-Chat\Repo-Chat\firebase.json
