--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "equipo1-chat",
+  "name": "socket-1",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "mongoose": "^6.7.0",
+    "socket.io": "^4.5.3"
   }
 }
