--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.0",
+    "sass": "^1.55.0",
     "socket.io": "^4.5.3"
   }
 }
