--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "firebase": "^9.14.0",
     "firebase-admin": "^11.3.0",
+    "googleapis": "^109.0.1",
     "mongoose": "^6.7.1",
+    "node-fetch": "^3.3.0",
     "sass": "^1.55.0",
     "socket.io": "^4.5.3",
     "toastify": "^2.0.1",
