--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.0",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -24,5 +25,8 @@
     "socket.io": "^4.5.3",
     "toastify": "^2.0.1",
     "toastify-js": "^1.12.0"
+  },
+  "devDependencies": {
+    "sweetalert2": "^11.4.8"
   }
 }
