--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start":"node",
+    "start":"node index",
     "dev": "sass --watch public/scss/app.scss public/css/app.css"
   },
   "keywords": [],
