--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 8080
-URI  =  "mongodb+srv://jesus2630:6IVEwCHFdtwLPzbl@cluster0.cth9r9b.mongodb.net/chat-proyect"
+URI  =  mongodb+srv://jesus2630:6IVEwCHFdtwLPzbl@cluster0.cth9r9b.mongodb.net/chat-proyect
